# education_practicum_2026

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
src/: HuffmanTree.c  HuffmanTree.h  fileReader.c  fileReader.h  fileWork.c  fileWork.h  frequencyTree.c  frequencyTree.h  minHeap.c  minHeap.h  tryFile.txt
tests/: testsEverything.c  testsForFrequencyTree.c  testsForHeap.c
